[tool.poetry]
name = "ca-race-repro"
version = "0.1.0"
description = "Minimal project - no vulnerable deps on main branch"
authors = ["test <test@test.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
