[tool.poetry]
name = "analytics-service"
version = "0.1.0"
description = "Analytics microservice"
authors = ["test <test@test.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "6.0.1"
jinja2 = "3.1.2"
requests = "2.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
